--- a/shapes2.html
+++ b/shapes2.html
@@ -32,6 +32,6 @@
     <body>
         <div class="square"></div>
         <div class="circle"></div>
-        <div class="rectangle"></div>
+        <div  style="margin-top: 20px;" class="rectangle"></div>
     </body>
 </html>
